--- a/index.html
+++ b/index.html
@@ -11,19 +11,11 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
+    
 </head>
 <body>
+    <!-- kartta -->
     <div id="map" style="height: 500px;"></div>
+    <script src="js/map.js"></script>
 </body>
-<script>
-    stadi = [60.192059, 24.945831]
-    var map = L.map('map').setView([60.192059, 24.945831], 10);
-    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-}).addTo(map);
-
-var marker = L.marker(stadi).addTo(map);
-marker.bindPopup("<b>Helsingfors</b>").openPopup();
-</script>
 </html>
