--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
+    <script src="js/api.js"></script>
     
 </head>
 <body>
