navibari ja cssaa

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     ></script>
   </head>
   <body>
+    <!-- navigation-->
     <script>
       makeNavBar();
     </script>
+    <!-- navigation-->
     <!-- kartta -->
     <div id="map" style="height: 500px"></div>
     <script src="js/map.js"></script>
