--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
-    <script src="js/api.js"></script>
-    
 </head>
 <body>
     <!-- kartta -->
-    <div id="map" style="height: 500px;"></div>
+    <div id="map" style="height: 500px; width: 100%;"></div>
     <script src="js/map.js"></script>
+    <script src="js/api.js"></script>
 </body>
 </html>
