--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- kartta -->
-    <div id="map" style="height: 500px; width: 100%;"></div>
+    <div id="map" style="height: 500px;"></div>
     <script src="js/map.js"></script>
     <script src="js/api.js"></script>
 </body>
