--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     crossorigin=""></script>
 </head>
 <body>
+    <div class="searchBox">
+        <input type="text" class="searchField" size="50" placeholder="Search for café or restaurant">
+        <button type="button" class="searchButton">Search</button>
+    </div>
+    <div class="categories">
+        <button type="button" class="categoriesButton">À la carte</button>
+        <button type="button" class="categoriesButton">Café</button>
+        <button type="button" class="categoriesButton">Fastfood</button>
+        <button type="button" class="categoriesButton">Pub</button>
+    </div>
     <!-- navigation-->
     <script>
       makeNavBar();
