Searchbar&buttons fixed pos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="tyylit/search.css">
 </head>
 <body>
+    <!-- navigation-->
+    <script>
+      makeNavBar();
+    </script>
+    <!-- navigation-->
+
+    <!-- searchbar & buttons -->
     <div class="searchBox">
         <input type="text" class="searchField" size="50" placeholder="Search for café or restaurant">
         <button type="button" class="searchButton">Search</button>
@@ -26,11 +33,8 @@
         <button type="button" class="categoriesButton">Fastfood</button>
         <button type="button" class="categoriesButton">Pub</button>
     </div>
-    <!-- navigation-->
-    <script>
-      makeNavBar();
-    </script>
-    <!-- navigation-->
+    <!-- searchbar & buttons -->
+
     <!-- kartta -->
     <div id="map" style="height: 500px"></div>
     <script src="js/map.js"></script>
