updated api key

--- a/places.html
+++ b/places.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <ol id="places"></ol>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi5mT_l3hpm7xGiSBvGlidhYba6m4czmg&libraries=places"></script>
 <script src="/js/places.js"></script>
 </body>
 </html>
