--- a/places.html
+++ b/places.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Getting the best places in town</title>
+    <title>Parhaat ravintolat</title>
 </head>
 <body>
 <ol id="places"></ol>
