--- a/resinfo.html
+++ b/resinfo.html
@@ -11,5 +11,6 @@
         sivu ravintolan tiedoille
     -->
     konsolissa json objekti
+    <script src="../js/restaraunt.js"></script>
 </body>
 </html>
