--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- kartta -->
     <div id="map" style="height: 500px"></div>
-    <script src="js/map.js"></script>
-    <script src="js/api.js"></script>
+    <script defer src="js/map.js"></script>
+    <script defer src="js/api.js"></script>
 </body>
 </html>
