--- a/resinfo.html
+++ b/resinfo.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>restaraunt info</title>
-    <script src="js/api.js"></script>
-    <script src="js/restaraunt.js"></script>
+    <script defer src="js/api.js"></script>
+    <script defer src="js/restaraunt.js"></script>
 </head>
 <body>
     
