--- a/resinfo.html
+++ b/resinfo.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./js/printFetchedData.js"></script>
     <title>restaraunt info</title>
-    <script defer src="js/api.js"></script>
-    <script defer src="js/restaraunt.js"></script>
-</head>
-<body>
-    
-    <!--
-        sivu ravintolan tiedoille
-    -->
-    objekti konsolissa :DD ????
-</body>
+  </head>
+  <body>
+    <script>
+      tulostaConsoliin();
+    </script>
+  </body>
 </html>
