--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin=""></script>
     <link rel="stylesheet" href="tyylit/search.css">
     <script src="js/slider.js"></script>
+    <script src="js/mapclass.js"></script>
 </head>
 <body>
     <!-- navigation-->
@@ -52,7 +53,8 @@
 
     <!-- kartta -->
     <div id="map" style="height: 500px"></div>
-    <script defer src="js/map.js"></script>
-    <script defer src="js/api.js"></script>
+    <script type="module" src="js/map.js"></script>
+    <script type="module" src="js/api.js"></script>
+    
 </body>
 </html>
