tää ehkä toimii?

--- a/resinfo.html
+++ b/resinfo.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <script>
-      tulostaConsoliin();
+      //tulostaConsoliin();
     </script>
+    <script src="js/api.js"></script>
+    <script src="js/restaraunt.js"></script>
   </body>
 </html>
