--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin=""></script>
     <link rel="stylesheet" href="tyylit/search.css">
     <script src="js/slider.js"></script>
+    <script src="js/categories.js"></script>
 </head>
 <body>
     <!-- navigation-->
@@ -26,27 +27,25 @@
     <!-- searchbar & buttons -->
     <div class="searchBox">
         <input type="text" class="searchField" size="50" placeholder="Search for café or restaurant">
-        <button type="button" class="searchButton" onclick="search()">Search</button>
+        <button type="button" class="searchButton" id="searchBtn" onclick="search()">Search</button>
     </div>
     <div class="categories">
-        <button type="button" class="categoriesButton">À la carte</button>
-        <button type="button" class="categoriesButton">Café</button>
-        <button type="button" class="categoriesButton">Fastfood</button>
-        <button type="button" class="categoriesButton">Pub</button>
+        <button type="button" id="alacarte" class="categoriesButton" name="alacarte">À la carte</button>
+        <button type="button" id="cafe" class="categoriesButton" name="cafe">Café</button>
+        <button type="button" id="fastfood" class="categoriesButton" name="fastfood">Fastfood</button>
+        <button type="button" id="pub" class="categoriesButton" name="pub">Pub</button>
+        Near Me:
+        <input type="checkbox" id="nearMeCheckbox" onclick="isChecked()">
     </div>
     <!-- searchbar & buttons -->
 
     <!-- range slider -->
-    <div id="sliderDiv">
-        <label for="nearMeCheckbox" id="nearMeCheckboxText">Near me</label>
-        <input type="checkbox" id="nearMeCheckbox">
-        <div id="sliderLeft">0m</div>
+    <div id="sliderToggle" style="display: none">
         <input type="range" id="slider" min="0" max="1000" value="500">
-        <div id="selector">
-            <div class="sliderButton"></div>
-            <div id="sliderValue"></div>
-        </div>
-        <div id="sliderRight">1000m</div>
+            <div id="selector">
+                <div class="sliderButton"></div>
+                <div id="sliderValue"></div>
+            </div>
     </div>
     <!-- range slider -->
 
