--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
     <link rel="stylesheet" href="tyylit/search.css">
     <script src="js/slider.js"></script>
     <script src="js/categories.js"></script>
+    <script src="js/mapclass.js"></script>
 </head>
 <body>
+<script>
+    if (localStorage.getItem("ravintolaOliot") !== null) {
+        console.log("Ei ladattu uudestaan");
+    } else {
+        console.log("Ladattiin uudestaan");
+        fetchData();
+    }
+    fetchData();
+</script>
     <!-- navigation-->
     <script>
       makeNavBar();
