--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/slider.js"></script>
     <script src="js/categories.js"></script>
     <script src="js/mapclass.js"></script>
+    <script src="js/fetchData.js"></script>
 </head>
 <body>
 <script>
