--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       crossorigin=""
     ></script>
     <link rel="stylesheet" href="tyylit/search.css" />
+    <link rel="stylesheet" href="tyylit/restarauntList.css"/>
     <script src="js/slider.js"></script>
     <script src="js/categories.js"></script>
     <script src="js/mapclass.js"></script>
+
   </head>
   <body>
     <script>
@@ -99,5 +101,13 @@
     <div id="map" style="height: 500px"></div>
     <script src="js/map.js"></script>
     <script src="js/api.js"></script>
+
+    <article id="ravintolaValikko">
+      <h4>restauraunts found:</h4>
+      <ul id="restList">
+       
+      </ul>
+      <script src="js/valikko.js"></script>
+    </article>
   </body>
 </html>
