kategoria checkboxit ja toiminnallisuus

--- a/index.html
+++ b/index.html
@@ -60,30 +60,31 @@
       </button>
     </div>
     <div class="categories">
-      <button
-        type="button"
+      <input
+        type="checkbox"
         id="alacarte"
-        class="categoriesButton"
+        class="categoriesCheckbox"
         name="alacarte"
       >
-        À la carte
-      </button>
-      <button type="button" id="cafe" class="categoriesButton" name="cafe">
-        Café
-      </button>
-      <button
-        type="button"
+      À la carte
+      </input>
+      <input type="checkbox" id="cafe" class="categoriesCheckbox" name="cafe">
+      Café
+      </input>
+      <input
+        type="checkbox"
         id="fastfood"
-        class="categoriesButton"
+        class="categoriesCheckbox"
         name="fastfood"
       >
-        Fastfood
-      </button>
-      <button type="button" id="pub" class="categoriesButton" name="pub">
-        Pub
-      </button>
-      Near Me:
+      Fastfood
+      </input>
+      <input type="checkbox" id="pub" class="categoriesCheckbox" name="pub">
+      Pub
+      </input>
+
       <input type="checkbox" id="nearMeCheckbox" onclick="isChecked()" />
+      Near Me
     </div>
     <!-- searchbar & buttons -->
 
