--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="js/slider.js"></script>
     <script src="js/categories.js"></script>
     <script src="js/mapclass.js"></script>
-
+    <script src="js/getLoc.js"></script>
   </head>
   <body>
     <script>
