--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       </input>
       <input
         type="checkbox"
-        id="fastfood"
+        id="Fast Food"
         class="categoriesCheckbox"
-        name="fastfood"
+        name="Fast Food"
       >
       Fastfood
       </input>
-      <input type="checkbox" id="pub" class="categoriesCheckbox" name="pub">
+      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
       Pub
       </input>
 
@@ -90,7 +90,9 @@
 
     <!-- range slider -->
     <div id="sliderToggle" style="display: none">
-      <input type="range" id="slider" min="0" max="1000" value="500" />
+      <input type="range" id="slider" min="1" max="1000" value="500"/>
+      <span id="value"></span>
+      <span id="output"></span>
       <div id="selector">
         <div class="sliderButton"></div>
         <div id="sliderValue"></div>
