--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <script src="js/categories.js"></script>
     <script src="js/mapclass.js"></script>
     <script src="js/getLoc.js"></script>
+    <script src="js/distance.js"></script>
+    <link rel="stylesheet" href="tyylit/loader.css">
+    <script src="js/loading.js"></script>
   </head>
   <body>
     <script>
@@ -98,7 +101,9 @@
     </div>
     
     <!-- kartta -->
-    <div id="map" style="height: 500px"></div>
+    <artcicle id="kartta">
+      <div id="map" class="" style="height: 500px"></div>
+    </artcicle>
     <script src="js/map.js"></script>
 
     <!-- ala-valikko löydetystä ravintoloista -->
