top 10 checkbox lisätty

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <div class="categories">
       <input
         type="checkbox"
-        id="alacarte"
+        id="top10"
         class="categoriesCheckbox"
-        name="alacarte"
+        name="top10"
       >
-      À la carte
+      Top 10
       </input>
       <input type="checkbox" id="cafe" class="categoriesCheckbox" name="cafe">
       Café
