--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <!-- ala-valikko löydetystä ravintoloista -->
     <article id="ravintolaValikko">
       <h4>restauraunts found:</h4>
+      <ul id="restList">
 
-       
+      </ul>
 
-     
     </article>
 
     <script src="js/valikko.js"></script>
