--- a/resinfo.html
+++ b/resinfo.html
@@ -6,11 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/printFetchedData.js"></script>
     <title>restaraunt info</title>
+    <style>
+      html {
+        font-family: Verdana, Arial, Helvetica, sans-serif;
+      }
+
+      body {
+        margin-left: 20%;
+        margin-right: 20%;
+        padding: 0;
+        background-color: #fff;
+      }
+
+      header {
+        background-color: #19303b;
+        padding: 1rem;
+        color: #fff;
+      }
+
+      main {
+        background-color: #fff;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+
+      article {
+        /* width: calc(100% / 3 - 2rem); */
+        width: 100%;
+        padding: 1rem;
+        box-sizing: border-box;
+        background-color: burlywood;
+      }
+
+      article header {
+        background-color: #fff;
+        padding: 0 0 1rem 0;
+        color: #000;
+      }
+
+      article h1 {
+        margin: 0;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <script>
-      //tulostaConsoliin();
-    </script>
+    <script src="./js/printFetchedData.js"></script>
     <script src="js/api.js"></script>
     <script src="js/restaraunt.js"></script>
   </body>
