--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         id="searchBtn"
         onclick="search()"
       >
-        Search
+        <p id="text">Search</p>
       </button>
     </div>
     <div class="categories">
@@ -72,10 +72,10 @@
         name="top10"
         onclick="top10()"
       >
-      Top 10
+      <p id="text">Top 10</p>
       </input>
       <input type="checkbox" id="cafe" class="categoriesCheckbox" name="cafe">
-      Café
+      <p id="text">Café</p>
       </input>
       <input
         type="checkbox"
@@ -83,14 +83,14 @@
         class="categoriesCheckbox"
         name="Fast Food"
       >
-      Fastfood
+      <p id="text">Fastfood</p>
       </input>
       <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
-      Pub
+      <p>Pub</p>
       </input>
 
       <input type="checkbox" id="nearMeCheckbox" onclick="isChecked()" />
-      Near Me
+      <p>Near Me</p>
     </div>
     <!-- searchbar & buttons -->
 
