--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="tyylit/style.css" />
     <script src="./js/fetchData.js"></script>
     <title>RaflAPI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -113,12 +116,12 @@
       <div id="map" class="" style="height: 500px"></div>
     </artcicle>
     <script src="js/map.js"></script>
-    <ol id="places"></ol>
     <!-- ala-valikko löydetystä ravintoloista -->
     <article id="ravintolaValikko">
     </article>
 
     <script src="js/valikko.js"></script>
     <script defer src="js/api.js"></script>
+    <footer><h2>© Legitimate Code 4 Lyfe//Sandels group</h2></footer>
   </body>
 </html>
