Added more functionality to top10 search

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         id="top10"
         class="categoriesCheckbox"
         name="top10"
-        onclick="top10()"
+        onclick="top10places()"
       >
       <p id="text">Top 10</p>
       </input>
@@ -119,7 +119,9 @@
     <!-- ala-valikko löydetystä ravintoloista -->
     <article id="ravintolaValikko">
     </article>
-
+<ul
+  id="places"
+  ></ul>
     <script src="js/valikko.js"></script>
     <script defer src="js/api.js"></script>
     <footer><h2>© Legitimate Code 4 Lyfe//Sandels group</h2></footer>
