tweaked top10 checkboxes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         type="checkbox"
         id="top10"
         class="categoriesCheckbox"
-        name="top10"
+        name="restaurant"
         onclick="top10places()"
       >
       <p id="text">Top 10</p>
@@ -88,7 +88,7 @@
       >
       <p id="text">Fastfood</p>
       </input>
-      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
+      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="bar">
       <p>Pub</p>
       </input>
 
