--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/navbar.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/header.js"></script>
     <link rel="stylesheet" href="tyylit/style.css" />
     <script src="./js/fetchData.js"></script>
     <title>RaflAPI</title>
@@ -34,6 +36,7 @@
     <script src="js/loading.js"></script>
   </head>
   <body>
+    <script>createHeader();</script>
     <script>
      
       if (localStorage.getItem("ravintolaOliot") !== null) {
@@ -120,6 +123,6 @@
     <script src="/js/places.js"></script>
     <script src="js/valikko.js"></script>
     <script defer src="js/api.js"></script>
-    <footer><h2>© Legitimate Code 4 Lyfe//Sandels group</h2></footer>
+    
   </body>
 </html>
