--- a/resinfo.html
+++ b/resinfo.html
@@ -6,51 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/printFetchedData.js"></script>
     <title>restaraunt info</title>
-    <style>
-      html {
-        font-family: Verdana, Arial, Helvetica, sans-serif;
-      }
-
-      body {
-        margin-left: 20%;
-        margin-right: 20%;
-        padding: 0;
-        background-color: #fff;
-      }
-
-      header {
-        background-color: #19303b;
-        padding: 1rem;
-        color: #fff;
-      }
-
-      main {
-        background-color: #fff;
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-      }
-
-      article {
-        /* width: calc(100% / 3 - 2rem); */
-        width: 100%;
-        padding: 1rem;
-        box-sizing: border-box;
-        background-color: burlywood;
-      }
-
-      article header {
-        background-color: #fff;
-        padding: 0 0 1rem 0;
-        color: #000;
-      }
-
-      article h1 {
-        margin: 0;
-        text-align: center;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="tyylit/resinfoStyle.css">
   </head>
   <body>
     <script src="./js/printFetchedData.js"></script>
