--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
       integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
       crossorigin=""
     />
-    <script
+    <script defer
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""
     ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi5mT_l3hpm7xGiSBvGlidhYba6m4czmg&libraries=places"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi5mT_l3hpm7xGiSBvGlidhYba6m4czmg&libraries=places"></script>
     <link rel="stylesheet" href="tyylit/search.css" />
     <link rel="stylesheet" href="tyylit/restarauntList.css"/>
-    <script src="js/slider.js"></script>
-    <script src="js/categories.js"></script>
-    <script src="js/mapclass.js"></script>
-    <script src="js/getLoc.js"></script>
-    <script src="js/distance.js"></script>
+    <script defer src="js/slider.js"></script>
+    <script defer src="js/categories.js"></script>
+    <script defer src="js/mapclass.js"></script>
+    <script defer src="js/getLoc.js"></script>
+    <script defer src="js/distance.js"></script>
     <link rel="stylesheet" href="tyylit/loader.css">
-    <script src="js/loading.js"></script>
+    <script defer src="js/loading.js"></script>
   </head>
   <body>
     <script>createHeader();</script>
@@ -114,15 +114,15 @@
     
     <!-- kartta -->
     <artcicle id="kartta">
-      <div id="map" class="" style="height: 500px"></div>
+      <div id="map" class=""></div>
     </artcicle>
-    <script src="js/map.js"></script>
+    <script defer src="js/map.js"></script>
     <!-- ala-valikko löydetystä ravintoloista -->
     <article id="ravintolaValikko">
     </article>
     <script src="/js/places.js"></script>
     <script src="js/valikko.js"></script>
     <script defer src="js/api.js"></script>
-    
+    <script>createFooter();</script>
   </body>
 </html>
