--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       >
       <p id="text">Fastfood</p>
       </input>
-      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="bar">
+      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
       <p>Pub</p>
       </input>
 
