fixattu slider ja kartta ja jne

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <!-- range slider -->
     <div id="sliderToggle" style="display: none">
       <div class="slidecontainer">
-        <p id="sliderText" ><span id="sliderVal"></span> m</p>
+        <p id="sliderText" ><span id="sliderVal"></span></p>
         <input type="range" min="1" max="10000" value="500" class="slider" id="myRange">
       </div>
-      <script src="js/sliderValueUpdate.js"></script>
+      <script defer src="js/sliderValueUpdate.js"></script>
       <!--<input type="range" id="slider" min="0" max="1000" value="500"/>
       <div id="selector">
         <div class="sliderButton"></div>
