--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         id="searchBtn"
         onclick="search()"
       >
-        <p id="text">Search</p>
+        <p id="text1">Search</p>
       </button>
     </div>
     <div class="categories">
@@ -76,18 +76,16 @@
         class="categoriesCheckbox"
         name="restaurant"
       >
-      <p id="text">Top 10</p>
+      <p id="text2">Top 10</p>
       </input>
-      <input type="checkbox" id="cafe" class="categoriesCheckbox" name="cafe">
-      <p id="text">Café</p>
-      </input>
+
       <input
         type="checkbox"
-        id="Fast Food"
+        id="Fast food"
         class="categoriesCheckbox"
-        name="Fast Food"
+        name="Fast food"
       >
-      <p id="text">Fastfood</p>
+      <p id="text4">Fastfood</p>
       </input>
       <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
       <p>Pub</p>
