cafe takas ja toimii

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
       >
       <p id="text2">Top 10</p>
       </input>
-
+      <input type="checkbox" id="cafés" class="categoriesCheckbox" name="cafés">
+      <p id="text3">Café</p>
+      </input>
       <input
         type="checkbox"
         id="Fast food"
