more info page added

--- a/resinfo.html
+++ b/resinfo.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./js/printFetchedData.js"></script>
     <title>restaraunt info</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="tyylit/resinfoStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="tyylit/resinfoStyle.css" />
+    <script src="js/navbar.js"></script>
   </head>
   <body>
-    <script src="./js/printFetchedData.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/restaraunt.js"></script>
+    <script>
+      makeNavBar();
+    </script>
+    <script defer src="js/api.js"></script>
+    <script defer src="js/printFetchedData.js"></script>
+    <script defer src="js/restaraunt.js"></script>
   </body>
 </html>
