--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""
     ></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi5mT_l3hpm7xGiSBvGlidhYba6m4czmg&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi5mT_l3hpm7xGiSBvGlidhYba6m4czmg&libraries=places"></script>
     <link rel="stylesheet" href="tyylit/search.css" />
     <link rel="stylesheet" href="tyylit/restarauntList.css"/>
     <script defer src="js/slider.js"></script>
@@ -75,6 +75,7 @@
         id="top10"
         class="categoriesCheckbox"
         name="restaurant"
+        onclick="top10places()"
       >
       <p id="text2">Top 10</p>
       </input>
