--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         class="searchField"
         size="50"
         placeholder="Search for café or restaurant"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"    
       />
       <button
         type="button"
@@ -75,10 +76,17 @@
         id="top10"
         class="categoriesCheckbox"
         name="restaurant"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
       >
       <p id="text2">Top 10</p>
       </input>
-      <input type="checkbox" id="cafés" class="categoriesCheckbox" name="cafés">
+      <input 
+        type="checkbox" 
+        id="cafés" 
+        class="categoriesCheckbox" 
+        name="cafés"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
+        >
       <p id="text3">Café</p>
       </input>
       <input
@@ -86,14 +94,26 @@
         id="Fast food"
         class="categoriesCheckbox"
         name="Fast food"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
       >
       <p id="text4">Fastfood</p>
       </input>
-      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
+      <input 
+        type="checkbox" 
+        id="Pub" 
+        class="categoriesCheckbox" 
+        name="Pub"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
+      >
       <p>Pub</p>
       </input>
 
-      <input type="checkbox" id="nearMeCheckbox" onclick="isChecked()" />
+      <input 
+        type="checkbox" 
+        id="nearMeCheckbox" 
+        onclick="isChecked()"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
+      />
       <p>Near Me</p>
     </div>
     <!-- searchbar & buttons -->
