--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         class="searchField"
         size="50"
         placeholder="Search for café or restaurant"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"    
       />
       <button
         type="button"
@@ -76,10 +77,17 @@
         class="categoriesCheckbox"
         name="restaurant"
         onclick="top10places()"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
       >
       <p id="text2">Top 10</p>
       </input>
-      <input type="checkbox" id="cafés" class="categoriesCheckbox" name="cafés">
+      <input 
+        type="checkbox" 
+        id="cafés" 
+        class="categoriesCheckbox" 
+        name="cafés"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
+        >
       <p id="text3">Café</p>
       </input>
       <input
@@ -87,10 +95,17 @@
         id="Fast food"
         class="categoriesCheckbox"
         name="Fast food"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
       >
       <p id="text4">Fastfood</p>
       </input>
-      <input type="checkbox" id="Pub" class="categoriesCheckbox" name="Pub">
+      <input 
+        type="checkbox" 
+        id="Pub" 
+        class="categoriesCheckbox" 
+        name="Pub"
+        onkeydown = "if (event.keyCode == 13) document.getElementById('searchBtn').click()"
+      >
       <p>Pub</p>
       </input>
 
