updated makers page

--- a/resinfo.html
+++ b/resinfo.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="tyylit/resinfoStyle.css" />
     <script src="js/navbar.js"></script>
     <script defer src="js/mapclass.js"></script>
+    <script src="js/footer.js"></script>
   </head>
   <body>
     <script>
@@ -34,5 +35,8 @@
     <script defer src="js/api.js"></script>
     <script defer src="js/printFetchedData.js"></script>
     <script defer src="js/restaraunt.js"></script>
+    <script>
+      createFooter();
+    </script>
   </body>
 </html>
