--- a/resinfo.html
+++ b/resinfo.html
@@ -24,9 +24,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="tyylit/resinfoStyle.css" />
+    <script src="js/header.js"></script>
     <script src="js/navbar.js"></script>
-    <script defer src="js/mapclass.js"></script>
     <script src="js/footer.js"></script>
+    <script defer src="js/mapclass.js"></script>
   </head>
   <body>
     <script>
@@ -35,8 +36,5 @@
     <script defer src="js/api.js"></script>
     <script defer src="js/printFetchedData.js"></script>
     <script defer src="js/restaraunt.js"></script>
-    <script>
-      createFooter();
-    </script>
   </body>
 </html>
