--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- ala-valikko löydetystä ravintoloista -->
     <article id="ravintolaValikko">
     </article>
-    <script src="/js/places.js"></script>
+    <script defer src="/js/places.js"></script>
     <script src="js/valikko.js"></script>
     <script defer src="js/api.js"></script>
     <script>createFooter();</script>
