--- a/video.html
+++ b/video.html
@@ -25,7 +25,7 @@
       makeNavBar();
     </script>
     <main>
-      <video width="parent" height="parent" controls id="video">
+      <video controls id="video">
         <source src="video/Raflapi4lyfe.mp4" type="video/mp4" />
       </video>
       <div>
